// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the NoResults component matches the snapshot in the case of no orders 1`] = `
.c0 {
  color: #000;
  text-align: center;
  margin-top: 10vh;
}

.c5 {
  height: auto;
  display: block;
  margin: 0 auto;
}

.c3 {
  display: inline-block;
  height: 48px;
  padding: 12px 16px;
  background-color: #64a60a;
  color: #fff;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  border-radius: 4px;
  vertical-align: top;
  font: 700 14px/24px "Open Sans",sans-serif;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  text-shadow: 0px 0px 2px #000;
  border-bottom: 4px solid rgba(0,0,0,0.2);
  -webkit-transition: background-color 150ms ease-out;
  transition: background-color 150ms ease-out;
}

.c3:hover,
.c3:focus {
  color: #fff;
}

.c3:hover,
.c3:focus {
  box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),inset 0 0 0 100px rgba( 0,0,0,0.1 );
}

.c3:active {
  -webkit-transform: translateY( 1px );
  -ms-transform: translateY( 1px );
  transform: translateY( 1px );
  box-shadow: none;
}

.c2 {
  min-width: 152px;
}

.c4 {
  -webkit-transform: translateY(1em);
  -ms-transform: translateY(1em);
  transform: translateY(1em);
}

.c1 {
  margin-bottom: 2em;
}

@media screen and ( max-width:400px ) {
  .c5 {
    max-width: 240px;
  }
}

@media screen and ( min-width:400px ) {
  .c5 {
    max-width: 384px;
  }
}

<div
  className="c0"
>
  <p>
    <span>
      Welcome to the downloads overview.
    </span>
  </p>
  <p>
    <span>
      It looks like you haven’t bought any products with downloadable files yet.
    </span>
  </p>
  <p>
    <span>
      Press the button below to visit yoast.com and look at our products.
    </span>
  </p>
  <a
    className="c1 c2 c3"
    href="https://yoast.com/shop/"
    rel="noopener noreferrer"
    target="_blank"
  >
    <span>
      Shop
    </span>
    <span
      className="screen-reader-text c4"
    >
      <span>
        (Opens in a new browser tab)
      </span>
    </span>
  </a>
  <img
    alt=""
    className="c5"
    src="noSites.svg"
  />
</div>
`;

exports[`the NoResults component matches the snapshot in the case of no sites 1`] = `
.c0 {
  color: #000;
  text-align: center;
  margin-top: 10vh;
}

.c1 {
  height: auto;
  display: block;
  margin: 0 auto;
}

@media screen and ( max-width:400px ) {
  .c1 {
    max-width: 240px;
  }
}

@media screen and ( min-width:400px ) {
  .c1 {
    max-width: 384px;
  }
}

<div
  className="c0"
>
  <p>
    <span>
      Welcome to the downloads overview.
    </span>
  </p>
  <p>
    <span>
      It looks like you haven’t bought any products with downloadable files yet.
    </span>
  </p>
  <p>
    <span>
      Press the button below to visit yoast.com and look at our products.
    </span>
  </p>
  <img
    alt=""
    className="c1"
    src="noSites.svg"
  />
</div>
`;

exports[`the NoResults component matches the snapshot in the case of no subscriptions 1`] = `
.c0 {
  color: #000;
  text-align: center;
  margin-top: 10vh;
}

.c5 {
  height: auto;
  display: block;
  margin: 0 auto;
}

.c3 {
  display: inline-block;
  height: 48px;
  padding: 12px 16px;
  background-color: #64a60a;
  color: #fff;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  border-radius: 4px;
  vertical-align: top;
  font: 700 14px/24px "Open Sans",sans-serif;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  text-shadow: 0px 0px 2px #000;
  border-bottom: 4px solid rgba(0,0,0,0.2);
  -webkit-transition: background-color 150ms ease-out;
  transition: background-color 150ms ease-out;
}

.c3:hover,
.c3:focus {
  color: #fff;
}

.c3:hover,
.c3:focus {
  box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),inset 0 0 0 100px rgba( 0,0,0,0.1 );
}

.c3:active {
  -webkit-transform: translateY( 1px );
  -ms-transform: translateY( 1px );
  transform: translateY( 1px );
  box-shadow: none;
}

.c2 {
  min-width: 152px;
}

.c4 {
  -webkit-transform: translateY(1em);
  -ms-transform: translateY(1em);
  transform: translateY(1em);
}

.c1 {
  margin-bottom: 2em;
}

@media screen and ( max-width:400px ) {
  .c5 {
    max-width: 240px;
  }
}

@media screen and ( min-width:400px ) {
  .c5 {
    max-width: 384px;
  }
}

<div
  className="c0"
>
  <p>
    <span>
      Welcome to the downloads overview.
    </span>
  </p>
  <p>
    <span>
      It looks like you haven’t bought any products with downloadable files yet.
    </span>
  </p>
  <p>
    <span>
      Press the button below to visit yoast.com and look at our products.
    </span>
  </p>
  <a
    className="c1 c2 c3"
    href="https://yoast.com/shop/"
    rel="noopener noreferrer"
    target="_blank"
  >
    <span>
      Shop
    </span>
    <span
      className="screen-reader-text c4"
    >
      <span>
        (Opens in a new browser tab)
      </span>
    </span>
  </a>
  <img
    alt=""
    className="c5"
    src="noSites.svg"
  />
</div>
`;
